Add initial Html for Mountain Bike trails site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Mountain Bike Trails</title>
+    </head>
+    <body>
+        <header>
+            <h1>Mountain Bike Trails</h1>
+            <nav></nav>
+        </header>
+        <main>
+            <h2>A pet project</h2>
+            
+            <p>Mountain bike trails are often difficult to find without having been to an area before. Here's some I've discovered.</p>
+            <img src="/images/trail-signs.jpg" alt="Trail Signs">
+            <article>
+                <h3>Ballon de Servance</h3>
+                <p>The ballon de servance is a bare mountain top in Alsace, not far from the famous Planche des Belles Filles. The surrounding valleys are densely wooded. The trees provide good protection from the sun during the summer.</p>
+                <p>There's a refuge nesr the Ballon where it is possible to stay for the night. There's a trough with a robinet. The water here is indicated as <q>non-potable</q> but I drank it without ill-effect.</p>
+                <p>More details on this route can be found <a href="#">here</a></p>
+                <img src="/images/ballon-de-servance.jpg" alt="A grassy mountain top field with wooded valleys in the distance"/>
+            </article>
+            <article>
+                <h3>Moosch</h3>
+                <p>The town of Moosch nestles in a valley in the Vosges. There are multiple trails that lead up both sides amongst trees. Typically for the region these ultimately lead to high pastures</p>
+                <p>Find out more about the route <a href="moosch.html">here</a>.</p>
+            </article>
+        </main>
+        <footer>
+
+        </footer>
+    </body>
+</html>
