Responsive mobile fixes for menu on landing page

--- a/ballon-de-servance.html
+++ b/ballon-de-servance.html
@@ -9,16 +9,10 @@
             <header>
                     <h1><a href="index.html">Mountain Bike Trails</a></h1>
                     <nav>
-                        <ul>
-                            <li>
-                                <a  href="ballon-de-servance.html">Ballon</a>
-                            </li>
-                            <li>
-                                <a href="moosch.html">Moosch</a>
-                            </li>
-                        </ul>               
+                        <a  href="bike.html">My Bike</a>
+                        <a href="me.html">Me</a>           
                     </nav>
-                </header>
+                 </header>
         <main>
             <h1>Ballon de servance</h1>
             <p>This route winds up the side of a valley folllowing the path of a waterfall 1and river before continuing along a ridge to the peak.</p>
