--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
         <header>
             <h1><a href="index.html">Mountain Bike Trails</a></h1>
             <nav>
-                <ul>
-                    <li>
-                        <a  href="ballon-de-servance.html">Ballon</a>
-                    </li>
-                    <li>
-                        <a href="moosch.html">Moosch</a>
-                    </li>
-                </ul>             
+                <a  href="bike.html">My Bike</a>
+                <a href="me.html">Me</a>           
             </nav>
         </header>
         <main>
