Fixes for mobile layout and removal of old parameters

--- a/moosch.html
+++ b/moosch.html
@@ -16,7 +16,9 @@
         <main>
             <h1>Moosch</h1>
             <p>A quote long exploration of the southern side of the valley</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m50!1m12!1m3!1d42940.29946816157!2d6.978774170436089!3d47.8431398295368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m35!3e1!4m5!1s0x47922b48dd922b5f%3A0x53a65566d0730f86!2sMoosch!3m2!1d47.860017899999995!2d7.0494509999999995!4m3!3m2!1d47.830028!2d7.010589599999999!4m5!1s0x47922c7ebfddf119%3A0xb66dd686c9d07342!2sRefuge%20de%20la%20Waldmatt%20-%20Ski%20Club%20Rossberg%20Thann!3m2!1d47.8224514!2d7.019823!4m3!3m2!1d47.8311279!2d6.9993780999999995!4m3!3m2!1d47.8381463!2d6.9905357!4m5!1s0x47922caeefb28d79%3A0x40a5fb99a3934e0!2sMalmerspach!3m2!1d47.865339!2d7.034153!4m3!3m2!1d47.8596082!2d7.048358599999999!5e1!3m2!1sen!2sfr!4v1567624610438!5m2!1sen!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <div class="google-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m50!1m12!1m3!1d42940.29946816157!2d6.978774170436089!3d47.8431398295368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m35!3e1!4m5!1s0x47922b48dd922b5f%3A0x53a65566d0730f86!2sMoosch!3m2!1d47.860017899999995!2d7.0494509999999995!4m3!3m2!1d47.830028!2d7.010589599999999!4m5!1s0x47922c7ebfddf119%3A0xb66dd686c9d07342!2sRefuge%20de%20la%20Waldmatt%20-%20Ski%20Club%20Rossberg%20Thann!3m2!1d47.8224514!2d7.019823!4m3!3m2!1d47.8311279!2d6.9993780999999995!4m3!3m2!1d47.8381463!2d6.9905357!4m5!1s0x47922caeefb28d79%3A0x40a5fb99a3934e0!2sMalmerspach!3m2!1d47.865339!2d7.034153!4m3!3m2!1d47.8596082!2d7.048358599999999!5e1!3m2!1sen!2sfr!4v1567624610438!5m2!1sen!2sfr" width="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>           
         </main>
     </body>
 </html>
