--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://brutalist-web.design/3ceb0ca7dd718ab29616-main.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
