Add link to fred and carol site in portfolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <p>An album of mountain bike trails I like</p>
                 <a href="./mountain-bike-trails/">View</a>
             </article>
+            <article>
+                <h2>F and C Adventures </h2>
+                <p>A website for a small language school run by my friends Fred and Carol</p>
+                <a href="./fred-and-carol/">View</a>
+            </article>
         </section>
     </main>
 </body>
