Change image file formats, split out family age, add activities page

--- a/fred-and-carol/Immersion/Activities.html
+++ b/fred-and-carol/Immersion/Activities.html
@@ -1,20 +1,95 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Fred And Carol - French Immersion</title>
+    <meta charset="utf-8"/>
+    <title>Activities</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/Immersion/">French Immersion</a>
-            <a href="/Lessons/">French Lessons</a>
-            <a href="/Cookery/">Cookery Lessons</a>
+            <a href="../">Home</a>
+            <a href="../Immersion/">French Immersion</a>
+            <a href="../Lessons/">French Lessons</a>
+            <a href="../Cookery/">Cookery Lessons</a>
         </nav>
     </header>
     <main>
-
+        <section>
+            <h1>Our activities</h1>
+            <p>There is so much to do in Morzine.</p>
+        </section>
+        <section>
+                <article>
+                    <h2>Homestay</h2>
+                    <p>We love to do things. Be it skiing, visiting the rich local region, walking in the hills drinking in the nature or relaxing over a coffee while shopping. As our guest of course you're invited!</p>
+                    <p>We'll spend 2 half-days together, relaxing, speaking french and enjoying mountain life.</p>
+                </article>
+                <article>
+                    <h2>Ski</h2>
+                    <p>Our chalet is in the heart of the portes du soleil so obviously during the winter we can arrange skiing.</p>
+                    <ul>
+                        <li>We'll share our local knowledge of the ski area</li>
+                        <li>Ski with us talking french for two half-days</li>
+                        <li>6 day ski pass for Les Gets-Morzine <strong>included</strong></li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Culture</h2>
+                    <p>Discover the mountain lifestyle, the traditions and visit some beautiful cities along the alpine lakes! Examples:  Annecy and its old city, The medieval village of Yvoire,  Castles like Ripaille...</p>
+                    <ul>
+                        <li>Spend 4 half days with us discovering the local culture</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Mountain Bike</h2>
+                    <p>The Portes du Soleil is know worldwide for its mountain biking (MTB). If you are a keen rider or if you have never ridden before but want to try, we can organise lessons with our partner, a previous professionnal DH rider (Champion of France).</p>
+                    <ul>
+                        <li>2 Half-days of downhill private instruction or 5 half days group instruction</li>                        
+                        <li>2 half days walk or hike with the family</li>                    
+                    </ul>
+                </article>
+                <article>
+                    <h2>Gourmet</h2>
+                    <p>Would you love to learn some French recipes or improve your chef skills? Fred will be more than happy to teach you some techniques and show you recipes, in French of course! You will also visit some local producers, such as a cheese farm, a fish farm or vineyards, and you’ll join us on our weekly trip to the market!</p>
+                    <ul>
+                        <li>2 visits (farm, fruitière, vineyards…)</li>
+                        <li>3 cookery lessons</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Wellness</h2>
+                    <p>Need to recharge your batteries? The Alps is the perfect destination: take a breath from our pure mountain air and benefit from the thermal water.</p>
+                    <ul>
+                        <li>2 half-days of walk in the mountain</li>
+                        <li>1 entrance to the thermal spa</li>
+                        <li>1 45 minute massage of your choice</li>
+                        <li>1 private yoga or pilates session OR several group sessions (depending on availability)</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Adrenalin</h2>
+                    <p>Our region is perfect for sport and adventure: in the river, in the water falls, in a canyon or up in the trees, you’ll feel the adrenaline!</p>
+                    <ul>
+                        <li>3 activities (Rafting, canyoning, hydrospeed, climbing or Via Ferrata)</li>
+                        <li>1 Adventure Park</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Paragliding</h2>
+                    <p>After 3 days of paragliding school, you will be able to take your 1st solo flight & enjoy the views over the Alps!</p>
+                    <ul>
+                        <li>3 half-days of paragliding school</li>
+                        <li>Equipment hire</li>
+                    </ul>
+                </article>
+                <a href="./Quote.html">Get a quote</a>
+        </section>
+        
+        <section>
+            <h2>''A LA CARTE'' PACKAGE</h2>
+            <p>You want to make the most of your holidays and try a bit of everything, it is possible! Tell me what you would like and I will organise your perfect holiday!</p>
+            <a href="../contact.html">Let us know what you'd like</a>
+        </section>
     </main>
     <footer>
         <p>F&C Experience ©2019  - French immersion in the Alps - <a href="mailto:hello@fcmorzine.com" target="_self">hello@fcmorzine.com</a></p>
