--- a/fred-and-carol/Immersion/Index.html
+++ b/fred-and-carol/Immersion/Index.html
@@ -1,16 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"../>
     <title>Fred And Carol - French Immersion</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/Immersion">French Immersion</a>
-            <a href="/Lessons">French Lessons</a>
-            <a href="/Cookery">Cookery Lessons</a>
+            <a href="../">Home</a>
+            <a href="../Immersion">French Immersion</a>
+            <a href="../Lessons">French Lessons</a>
+            <a href="../Cookery">Cookery Lessons</a>
         </nav>
     </header>
     <main>
@@ -30,44 +30,12 @@
                <h2>Activities</h2>
                <p>We can arrange activities where you can continue using your french: Skiing, paragliding, riding rapids, mountain biking.</p>
                <p>Also our region has a rich culture. You can discover local towns and villages with us. On the other hand if you want to relax we can arrange welllness break to accompany your french studies.</p>
-               
+               <a href="../Immersion/activities.html">Find out more</a>
            </article>
-           <aside>
-               <h2>Get a quote</h2>
-               <p>Get a quote <a href="/Immersion/Quote.html">here</a>.</p>
-           </aside>
+
+            <a href="../Immersion/Quote.html">Get a quote</a>.</p>
        </section>
-        <section id="family">
-            <h1>Our family</h1>
-            <article>
-                <h2>Carol</h2>
-                <p>I grew up near Paris and never thought of living in the mountains. I enjoyed a busy and intense city life ! In 2009 we moved here and I quickly realised how beautiful the mountains are in every season and how much better the living style in a quiet area close to nature. I changed my habits, stopped being busy all the time and started to enjoy the life, my family, our friends and this amazing region nestled between lakes and mountains! Of course I will teach you French to improve your ability, but I also want to share our lifestyle with you, the sport, nature, tasty meals, family &friends!</p>
-                <p>After a Master degree in International business and 10 years of experience in the tourism industry, I changed  my work  and started a French teaching course, gaining a diploma from the Alliance Française. I love teaching my mother tongue and tailoring my lessons to individual student.</p>
-                <img src="/images/carol.jpg" alt="A young woman with dark hair and striking eyes" />
-            </article>
-            <article>
-                <h2>Fred</h2>
-                <p>You have a question about the mountains, the history of the Alps, the climate in the region or the plants growing near the river? Fred will tell you the answer! Born here and with a Masters degree in Geography, Fred has an extensive knowledge of the Portes du Soleil area and can show you the best walks and views!</p>
-                <p>Fred is also very practical and built our chalet himself, ''upcycling'' a lot of old furniture & wood in the process.</p>
-                <p>He is also a talented Chef. – owning and cooking at our restaurant in Les Gets for 5 years whilst I manage the front of house. Fresh ingredients and simple tasty recipes are his favourites!</p>
-                <img src="/images/fred.webp" alt="A man is concentrating intently on a dish he is preparing" />
-            </article>
-            <article>
-                <h2>Antoine</h2>
-                <p>I like meeting students and will ask you lots of questions, but don’t worry I know to speak slowly if you need me to!</p>
-                <img src="/images/antoine.jpg" alt="A young boy in a cycling helmet smiling with his mother" />
-            </article>
-            <article>
-                <h2>Anna</h2>
-                <p>I might ask you to play with me. I like puzzles books and stories.</p>
-                <img src="/images/anna.webp" alt="A little girl with blond hair smiling"/>
-            </article>
-            <article>
-                <h2>Nouki</h2>
-                <p>Our little dog rescued  froma refuge on The Reunion Island. He is very kind and loves cuddles and walks.</p>
-                <img src="/images/nooki.webp" alt="A friendly dog" />
-            </article>
-        </section>
+  
     </main>
     <footer>
         <p>F&C Experience ©2019  - French immersion in the Alps - <a href="mailto:hello@fcmorzine.com" target="_self">hello@fcmorzine.com</a></p>
