--- a/fred-and-carol/Immersion/Quote.html
+++ b/fred-and-carol/Immersion/Quote.html
@@ -1,16 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"../>
     <title>Fred And Carol - French Immersion</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/Immersion">French Immersion</a>
-            <a href="/Lessons">French Lessons</a>
-            <a href="/Cookery">Cookery Lessons</a>
+            <a href="../">Home</a>
+            <a href="../Immersion">French Immersion</a>
+            <a href="../Lessons">French Lessons</a>
+            <a href="../Cookery">Cookery Lessons</a>
         </nav>
     </header>
     <main>
@@ -22,17 +22,17 @@
                     <label for="single">Single Occupancy</label>
                     <input type="radio" id="single" name="occupancy" value="single" checked />
                     <label for="double">Double Occupancy</label>
-                    <input type="radio" id="double" name="occupancy" value="double"/>
+                    <input type="radio" id="double" name="occupancy" value="double"../>
                 </section>
                 <section>
                     <label for="length">Length of Stay (weeks)</label>
-                    <input id="length" type="number" value="1" min="1" max="12" />
+                    <input id="length" type="number" value="1" min="1" max="12"../>
                 </section>
                 <section>
                     <label for="half-board">Half Board</label>
                     <input type="radio" id="half-board" name="board" value="half" checked />
                     <label for="full-board">Full Board</label>
-                    <input type="radio" id="full-board" name="board" value="full" />
+                    <input type="radio" id="full-board" name="board" value="full"../>
                 </section>
                 <section>
                     <label for="package">Choose your package</label>
@@ -48,7 +48,7 @@
                     </select>
                 </section>
                 <section>
-                    <input type="submit" value="Calculate" />
+                    <input type="submit" value="Calculate"../>
                 </section>
 
             </form>
