--- a/fred-and-carol/Index.html
+++ b/fred-and-carol/Index.html
@@ -7,10 +7,10 @@
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/Immersion/">French Immersion</a>
-            <a href="/Lessons/">French Lessons</a>
-            <a href="/Cookery/">Cookery Lessons</a>
+            <a href="./">Home</a>
+            <a href="./Immersion/">French Immersion</a>
+            <a href="./Lessons/">French Lessons</a>
+            <a href="./Cookery/">Cookery Lessons</a>
         </nav>
     </header>
     <main>
@@ -22,6 +22,7 @@
         <section id="thefamily">
             <h1>Our family</h1>
             <p>I am Carol, your French teacher. My husband is Fred and we have 2 children: Antoine et Anna. We also have a dog : Nouki, 3 donkeys and hens. We love living in the mountains and will be happy to share our lifestyle with you and show you all the best local sites.</p>
+            <a href="./family.html">Come say hello!</a>
         </section>
         <section id="offer">
             <h1>Discover your french adventure with us</h1>
@@ -33,6 +34,7 @@
                 <p>
                     Immersion includes private french lessons and immersion with our daily family life. The lessons give you the language structure and rules and the immersion gives you the opportunity to use your French language skills in  a safe, supportive environment.
                 </p>
+                <a href="./Immersion/">Find out more</a>
             </article>
             <aside>
                 <p>Combine your immersion with an activity for another opportunity to speak French: ski, snowshoe, hike, walk, city visit…</p>
@@ -40,6 +42,7 @@
             <article>
                 <h2>French Lessons</h2>
                 <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d loved to improve your language skills, know more about the region and the tradition, French lifestyle?</p>
+                <a href="./Lessons/">Learn french with me</a>
             </article>
             <aside>
                 <h3>Adaptability</h3>
@@ -50,6 +53,7 @@
             <article>
                 <h2>Cookery Lessons</h2>
                 <p>Fred, our talented French chef, offers cookery lessons either at your accomodation in the afternoon or at our chalet on daytime.</p>
+                <a href="./Cookery/">See what's on the menu!</a>
             </article>
             <aside>If you suffer from allergies or have specific needs, let us know and Fred will adapt the meals.</aside>
         </section>
