--- a/fred-and-carol/Lessons/Index.html
+++ b/fred-and-carol/Lessons/Index.html
@@ -1,16 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"../>
     <title>Fred And Carol - French Immersion</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
-            <a href="/Immersion">French Immersion</a>
-            <a href="/Lessons">French Lessons</a>
-            <a href="/Cookery">Cookery Lessons</a>
+            <a href="../">Home</a>
+            <a href="../Immersion">French Immersion</a>
+            <a href="../Lessons">French Lessons</a>
+            <a href="../Cookery">Cookery Lessons</a>
         </nav>
     </header>
     <main>
