--- a/fred-and-carol/contact.html
+++ b/fred-and-carol/contact.html
@@ -1,19 +1,20 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"../>
-    <title>Fred And Carol - French Immersion</title>
+    <meta charset="utf-8"/>
+    <title>Contact</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="../">Home</a>
-            <a href="../Immersion/">French Immersion</a>
-            <a href="../Lessons/">French Lessons</a>
-            <a href="../Cookery/">Cookery Lessons</a>
+            <a href="./Immersion/">French Immersion</a>
+            <a href="./Lessons/">French Lessons</a>
+            <a href="./Cookery/">Cookery Lessons</a>
         </nav>
     </header>
     <main>
+
 
     </main>
     <footer>
