Add image to intro. Styling for banner and intro at 3 screen sizes

--- a/fred-and-carol/Index.html
+++ b/fred-and-carol/Index.html
@@ -26,22 +26,26 @@
             <img class="image" src="./images/summer-mountains.jpg" alt="A lake in a deep valey surrounded by trees.">
 
         </section>
-        <section>
-                <h1>Discover your french adventure with us</h1>
-                        <p>Immerse yourself in the real France! Experience authentic french mountain living. Be picked up from
-                            geneva by us and in just 90 minutes, you could be be in our warm chalet on the meadows surrounding the
-                            outstanding French alpine resort of Morzine.</p>
-                        <p>Improve your French with me, Carol, a masters qualified French teacher and learn French cooking from my
-                            husband Fred, an experienced chef....or just enjoy the results each evening with us.</p>
-
+        <section class="intro">
+            <img class="image" src="./images/cascade.jpg" alt="A child plays next to a beautiful waterfall" />
+            <div class="text">
+                    <h1>Discover your french adventure with us</h1>
+                    <p>Immerse yourself in the real France! Experience authentic french mountain living. Be picked up from
+                        geneva by us and in just 90 minutes, you could be be in our warm chalet on the meadows surrounding the
+                        outstanding French alpine resort of Morzine.</p>
+                    <p>Improve your French with me, Carol, a masters qualified French teacher and learn French cooking from my
+                        husband Fred, an experienced chef....or just enjoy the results each evening with us.</p>        
+            </div>
+   
         </section>
         <section class="half-section">
             <div class="text">
-                    <h1>Our family</h1>
-                    <p>I am Carol, your French teacher. My husband is Fred and we have 2 children: Antoine et Anna. We also have
-                        a dog : Nouki, 3 donkeys and hens. We love living in the mountains and will be happy to share our
-                        lifestyle with you and show you all the best local sites.</p>
-                    <a href="./family.html">Come say hello!</a>
+                <h1>Our family</h1>
+                <p>I am Carol, your French teacher. My husband is Fred and we have 2 children: Antoine et Anna. We also
+                    have
+                    a dog : Nouki, 3 donkeys and hens. We love living in the mountains and will be happy to share our
+                    lifestyle with you and show you all the best local sites.</p>
+                <a href="./family.html">Come say hello!</a>
             </div>
 
             <img class="image" src="./images/fred-et-carol.jpg" alt="A pleasant young woman smiling" />
@@ -52,16 +56,18 @@
             <article class="half-section">
                 <img class="image" src="./images/at-home.jpg" alt="A family and friends at the dinner table smiling" />
                 <div class="text right">
-                        <h2>French Immersion</h2>
-                        <p>
-                            Hear and speak French everyday, the best way to make maximum progress in minimum time!
-                        </p>
-                        <p>
-                            Immersion includes private french lessons and immersion with our daily family life. The lessons give
-                            you the language structure and rules and the immersion gives you the opportunity to use your French
-                            language skills in a safe, supportive environment.
-                        </p>
-                        <a href="./Immersion/">Find out more</a>
+                    <h2>French Immersion</h2>
+                    <p>
+                        Hear and speak French everyday, the best way to make maximum progress in minimum time!
+                    </p>
+                    <p>
+                        Immersion includes private french lessons and immersion with our daily family life. The lessons
+                        give
+                        you the language structure and rules and the immersion gives you the opportunity to use your
+                        French
+                        language skills in a safe, supportive environment.
+                    </p>
+                    <a href="./Immersion/">Find out more</a>
                 </div>
             </article>
             <aside>
@@ -70,11 +76,13 @@
             </aside>
             <article class="half-section">
                 <div class="text">
-                        <h2>French Lessons</h2>
-                        <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d loved
-                            to improve your language skills, know more about the region and the tradition, French lifestyle?</p>
+                    <h2>French Lessons</h2>
+                    <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d
+                        loved
+                        to improve your language skills, know more about the region and the tradition, French lifestyle?
+                    </p>
 
-                        <a  href="./Lessons/">Learn french with me</a>    
+                    <a href="./Lessons/">Learn french with me</a>
                 </div>
                 <img class="image" src="./images/private-lessons.jpg" alt="A smiling teacher explaining to a student" />
             </article>
@@ -85,12 +93,14 @@
                 <p>flexible lesson schedule, to fit around both your activity program and the weather forecast!</p>
             </aside>
             <article class="half-section">
-                <img class="image" src="./images/cooking-lesson.jpg" alt="A student stirs a pot smiling at the camera" />
+                <img class="image" src="./images/cooking-lesson.jpg"
+                    alt="A student stirs a pot smiling at the camera" />
                 <div class="text right">
-                        <h2>Cookery Lessons</h2>
-                        <p>Fred, our talented French chef, offers cookery lessons either at your accomodation in the afternoon
-                            or at our chalet on daytime.</p>           
-                        <a href="./Cookery/">See what's on the menu!</a>
+                    <h2>Cookery Lessons</h2>
+                    <p>Fred, our talented French chef, offers cookery lessons either at your accomodation in the
+                        afternoon
+                        or at our chalet on daytime.</p>
+                    <a href="./Cookery/">See what's on the menu!</a>
                 </div>
 
             </article>
