Style of pages, footer, additional images

--- a/fred-and-carol/Index.html
+++ b/fred-and-carol/Index.html
@@ -19,11 +19,11 @@
         </nav>
     </header>
     <main>
-        <section class="banner">
-            <h1 class="heading">Learning french and cookery in the mountains</h1>
+        <section class="banner" style="background-image: url('./images/summer-mountains.jpg')">
+            <h1 class="heading">Learn french and cookery in the mountains</h1>
 
 
-            <img class="image" src="./images/summer-mountains.jpg" alt="A lake in a deep valey surrounded by trees.">
+            <!-- <img class="image" src="./images/summer-mountains.jpg" alt="A lake in a deep valey surrounded by trees."> -->
 
         </section>
         <section class="intro">
@@ -38,21 +38,21 @@
             </div>
    
         </section>
-        <section class="half-section">
-            <div class="text">
-                <h1>Our family</h1>
-                <p>I am Carol, your French teacher. My husband is Fred and we have 2 children: Antoine et Anna. We also
-                    have
-                    a dog : Nouki, 3 donkeys and hens. We love living in the mountains and will be happy to share our
-                    lifestyle with you and show you all the best local sites.</p>
-                <a href="./family.html">Come say hello!</a>
-            </div>
 
-            <img class="image" src="./images/fred-et-carol.jpg" alt="A pleasant young woman smiling" />
-
-        </section>
         <section class="articles">
-
+                <article class="half-section">
+                        <div class="text">
+                            <h1>Our family</h1>
+                            <p>I am Carol, your French teacher. My husband is Fred and we have 2 children: Antoine et Anna. We also
+                                have
+                                a dog : Nouki, 3 donkeys and hens. We love living in the mountains and will be happy to share our
+                                lifestyle with you and show you all the best local sites.</p>
+                            <a href="./family.html">Come say hello!</a>
+                        </div>
+            
+                        <img class="image" src="./images/fred-et-carol.jpg" alt="A pleasant young woman smiling" />
+            
+                    </article>
             <article class="half-section">
                 <img class="image" src="./images/at-home.jpg" alt="A family and friends at the dinner table smiling" />
                 <div class="text right">
@@ -69,10 +69,11 @@
                     </p>
                     <a href="./Immersion/">Find out more</a>
                 </div>
+
             </article>
             <aside>
-                <p>Combine your immersion with an activity for another opportunity to speak French: ski, snowshoe, hike,
-                    walk, city visit…</p>
+                    <p>Combine your immersion with an activity for another opportunity to speak French: ski, snowshoe, hike,
+                        walk, city visit…</p>
             </aside>
             <article class="half-section">
                 <div class="text">
@@ -85,13 +86,14 @@
                     <a href="./Lessons/">Learn french with me</a>
                 </div>
                 <img class="image" src="./images/private-lessons.jpg" alt="A smiling teacher explaining to a student" />
+
             </article>
             <aside>
-                <h3>Adaptability</h3>
-                <p>lessons adapted to your needs to make quick progress.</p>
-                <h3>Flexibility</h3>
-                <p>flexible lesson schedule, to fit around both your activity program and the weather forecast!</p>
-            </aside>
+                    <h3>Adaptability</h3>
+                    <p>lessons adapted to your needs to make quick progress.</p>
+                    <h3>Flexibility</h3>
+                    <p>flexible lesson schedule, to fit around both your activity program and the weather forecast!</p>
+                </aside>
             <article class="half-section">
                 <img class="image" src="./images/cooking-lesson.jpg"
                     alt="A student stirs a pot smiling at the camera" />
@@ -105,7 +107,7 @@
 
             </article>
             <aside>If you suffer from allergies or have specific needs, let us know and Fred will adapt the meals.
-            </aside>
+                </aside>
         </section>
     </main>
     <footer>
