--- a/fred-and-carol/Immersion/Index.html
+++ b/fred-and-carol/Immersion/Index.html
@@ -3,37 +3,46 @@
 <head>
     <meta charset="utf-8"../>
     <title>Fred And Carol - French Immersion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css" />
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="../">Home</a>
-            <a href="../Immersion">French Immersion</a>
-            <a href="../Lessons">French Lessons</a>
-            <a href="../Cookery">Cookery Lessons</a>
-        </nav>
-    </header>
+        <header>
+                <img src="../images/montagne.png" />
+                <nav>
+                    <a href="../">Home</a>
+                    <a href="../Immersion">French Immersion</a>
+                    <a href="../Lessons">French Lessons</a>
+                    <a href="../Cookery">Cookery Lessons</a>
+                </nav>
+            </header>
     <main>
+        <section class="banner" style="background-image: url('../images/immersion.jpg');">
+                <h1 class="heading">French immersion</h1>
+        </section>
+        <section class="intro">
+                <h2>Improve your French language skills, share our life and keep some free time.</h2>
+                <p>Immersion means that you will use your french language skills immediately in real situations. This is how fluency ad confidence is built.</p>
+                <a href="../Immersion/Quote.html">Get a quote</a>.</p>
+        </section>
        <section id="immersion">
-           <article>
-               <h1>French immersion</h1>
-               <p>Improve your French language skills, share our life and keep some free time.</p>
-               <p>Immersion means that you will use your french language skills immediately in real situations. This is how fluency ad confidence is built.</p>
+           <article class="half-section">
+               <div class="text">
+                    <h2>Lessons</h2>
+                    <p>2 hours of formal lessons a day, for 5 days = 10 hours/week (1 :1 or 2 :1).<p>
+                    <p>The lessons are tailor made for for your level and specific needs. ​The lessons will cover speaking, listening, reading and writing skills. Together, we will set a work plan based on your strengths and weaknesses but also on your personal objectives.</p>
+                    <p>I will be your personal, dedicated French teacher. No student teachers, no classrooms, no intimidating groups!</p>
+               </div>
            </article>
-           <article>
-               <h2>Lessons</h2>
-               <p>2 hours of formal lessons a day, for 5 days = 10 hours/week (1 :1 or 2 :1).<p>
-               <p>The lessons are tailor made for for your level and specific needs. ​The lessons will cover speaking, listening, reading and writing skills. Together, we will set a work plan based on your strengths and weaknesses but also on your personal objectives.</p>
-               <p> I will be your personal, dedicated French teacher. No student teachers, no classrooms, no intimidating groups!</p>
-           </article>
-           <article>
-               <h2>Activities</h2>
-               <p>We can arrange activities where you can continue using your french: Skiing, paragliding, riding rapids, mountain biking.</p>
-               <p>Also our region has a rich culture. You can discover local towns and villages with us. On the other hand if you want to relax we can arrange welllness break to accompany your french studies.</p>
-               <a href="../Immersion/activities.html">Find out more</a>
-           </article>
+           <article class="half-section">
+               <div class="text">
+                    <h2>Activities</h2>
+                    <p>We can arrange activities where you can continue using your french: Skiing, paragliding, riding rapids, mountain biking.</p>
+                    <p>Also our region has a rich culture. You can discover local towns and villages with us. On the other hand if you want to relax we can arrange welllness break to accompany your french studies.</p>
+                    <a href="../Immersion/activities.html">Find out more</a>
+               </div>
 
-            <a href="../Immersion/Quote.html">Get a quote</a>.</p>
+           </article>
        </section>
   
     </main>
