--- a/fred-and-carol/family.html
+++ b/fred-and-carol/family.html
@@ -4,9 +4,11 @@
         <title>Our family</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="./styles/main.css" />
     </head>
     <body>
         <header>
+            <img src="./images/montagne.png" />
             <nav>
                 <a href="./">Home</a>
                 <a href="./Immersion">French Immersion</a>
@@ -16,39 +18,49 @@
         </header>
     </body>
     <main>
-        <section class="banner">
-            <h1>Our family</h1>
-            <img src="./images/family-photo.jpg" alt="Happy smiling family in sunshine" />
+        <section class="full-banner" style="background-image: url('./images/family-photo.jpg')" />
+            <h1 class="heading">Our family</h1>
+            <!-- <img class="image" src="./images/family-photo.jpg" alt="Happy smiling family in sunshine" /> -->
         </section>
         <section id="family">
           
-            <article>
-                <h2>Carol</h2>
-                <p>I grew up near Paris and never thought of living in the mountains. I enjoyed a busy and intense city life ! In 2009 we moved here and I quickly realised how beautiful the mountains are in every season and how much better the living style in a quiet area close to nature. I changed my habits, stopped being busy all the time and started to enjoy the life, my family, our friends and this amazing region nestled between lakes and mountains! Of course I will teach you French to improve your ability, but I also want to share our lifestyle with you, the sport, nature, tasty meals, family &friends!</p>
-                <p>After a Master degree in International business and 10 years of experience in the tourism industry, I changed  my work  and started a French teaching course, gaining a diploma from the Alliance Française. I love teaching my mother tongue and tailoring my lessons to individual student.</p>
-                <img src="./images/carol.jpg" alt="A young woman with dark hair and striking eyes"../>
+            <article class="half-section">
+                <div class="text">
+                        <h2>Carol</h2>
+                        <p>I grew up near Paris and never thought of living in the mountains. I enjoyed a busy and intense city life ! In 2009 we moved here and I quickly realised how beautiful the mountains are in every season and how much better the living style in a quiet area close to nature. I changed my habits, stopped being busy all the time and started to enjoy the life, my family, our friends and this amazing region nestled between lakes and mountains! Of course I will teach you French to improve your ability, but I also want to share our lifestyle with you, the sport, nature, tasty meals, family &friends!</p>
+                        <p>After a Master degree in International business and 10 years of experience in the tourism industry, I changed  my work  and started a French teaching course, gaining a diploma from the Alliance Française. I love teaching my mother tongue and tailoring my lessons to individual student.</p>        
+                </div>
+               <img class="image" src="./images/carol.jpg" alt="A young woman with dark hair and striking eyes"../>
             </article>
-            <article>
+            <article class="half-section">
+                <div class="text">
                 <h2>Fred</h2>
                 <p>You have a question about the mountains, the history of the Alps, the climate in the region or the plants growing near the river? Fred will tell you the answer! Born here and with a Masters degree in Geography, Fred has an extensive knowledge of the Portes du Soleil area and can show you the best walks and views!</p>
                 <p>Fred is also very practical and built our chalet himself, ''upcycling'' a lot of old furniture & wood in the process.</p>
                 <p>He is also a talented Chef. – owning and cooking at our restaurant in Les Gets for 5 years whilst I manage the front of house. Fresh ingredients and simple tasty recipes are his favourites!</p>
-                <img src="./images/fred.jpg" alt="A man is concentrating intently on a dish he is preparing"../>
+                </div>
+                <img class="image" src="./images/fred.jpg" alt="A man is concentrating intently on a dish he is preparing"../>
             </article>
-            <article>
-                <h2>Antoine</h2>
-                <p>I like meeting students and will ask you lots of questions, but don’t worry I know to speak slowly if you need me to!</p>
-                <img src="./images/antoine.jpg" alt="A young boy in a cycling helmet smiling with his mother"../>
+            <article class="half-section">
+                <div class="text">
+                    <h2>Antoine</h2>
+                    <p>I like meeting students and will ask you lots of questions, but don’t worry I know to speak slowly if you need me to!</p>
+                </div>
+                <img class="image" src="./images/antoine.jpg" alt="A young boy in a cycling helmet smiling with his mother"../>
             </article>
-            <article>
-                <h2>Anna</h2>
-                <p>I might ask you to play with me. I like puzzles books and stories.</p>
-                <img src="./images/anna.jpg" alt="A little girl with blond hair smiling"../>
+            <article class="half-section">
+                <div class="text">
+                    <h2>Anna</h2>
+                    <p>I might ask you to play with me. I like puzzles books and stories.</p>
+                </div>
+                <img class="image" src="./images/anna.jpg" alt="A little girl with blond hair smiling"../>
             </article>
-            <article>
-                <h2>Nouki</h2>
-                <p>Our little dog rescued  froma refuge on The Reunion Island. He is very kind and loves cuddles and walks.</p>
-                <img src="./images/nooki.jpg" alt="A friendly dog"../>
+            <article class="half-section">
+                <div class="text">
+                    <h2>Nouki</h2>
+                    <p>Our little dog rescued from a refuge on The Reunion Island. He is very kind and loves cuddles and walks.</p>
+                </div>
+                <img class="image" src="./images/nooki.jpg" alt="A friendly dog"../>
             </article>
         </section>
     </main>
