Add new image and change images for lessons pages

--- a/fred-and-carol/Lessons/Index.html
+++ b/fred-and-carol/Lessons/Index.html
@@ -17,8 +17,8 @@
         </nav>
     </header>
     <main>
-        <section class="banner" style="background-image: url('../images/parapente-banner.jpg')">
-                <h1 class="heading top dark">French Lessons</h1>
+        <section class="banner" style="background-image: url('../images/private-lessons.jpg'); background-position: top;">
+                <h1 class="heading top">French Lessons</h1>
         </section> 
         <section class="intro">
                 <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d loved to improve your language skills, know more about the region and the tradition, French lifestyle?</p>        </section>
@@ -50,7 +50,7 @@
 
             </article>
             <article class="half-section">
-                <img class="image" src="../images/private-lessons.jpg" />
+                <img class="image" src="../images/jeux-langue-francais.jpg" />
                 <div class="text">
                         <h2>Private Lessons</h2>
                         <p>The lessons will take place <em>at your accomodation</em>.</p>
