--- a/fred-and-carol/Immersion/Quote.html
+++ b/fred-and-carol/Immersion/Quote.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8"../>
     <title>Fred And Carol - French Immersion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css" />
 </head>
 <body>
     <header>
+        <img src="../images/montagne.png" />
         <nav>
             <a href="../">Home</a>
             <a href="../Immersion">French Immersion</a>
